--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,14 @@ h1 {
   align-items: center;
 }
 
+.link-button {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 38px;
+  text-decoration: none;
+}
+
 .file-upload {
   display: inline-flex;
   align-items: center;
