--- a/sprints.css
+++ b/sprints.css
@@ -623,6 +623,27 @@ button.sp-danger {
   background: #fff;
 }
 
+.sp-goal-item {
+  cursor: grab;
+}
+
+.sp-goal-item:active {
+  cursor: grabbing;
+}
+
+.sp-goal-item.is-dragging {
+  opacity: 0.55;
+}
+
+.sp-goal-item.drop-before {
+  border-top: 3px solid #0b7a63;
+}
+
+.sp-goal-list.drop-at-end {
+  box-shadow: inset 0 -3px 0 rgba(11, 122, 99, 0.78);
+  border-radius: 8px;
+}
+
 .sp-goal-row {
   display: grid;
   grid-template-columns: minmax(0, 1fr) auto minmax(132px, auto) auto;
